--- a/Webpage/pages/events.css
+++ b/Webpage/pages/events.css
@@ -2,42 +2,13 @@ body{
     margin:5%;
     background-color: #d9d9d9;
 }
-
-#menu{
-    float:left;
-    width:5%;
-    height:auto;
-}
-#loggo{
-    float:right;
-    width:10%;
-}
-
-#header h1{
-    display:inline;
-    
-}
-
-.event{
-    position: relative;
-    width:100%;
-}
-.text_block{
-    position:absolute;
-    bottom: 0;
-    left:0;
-    color:white;
-    font-size: 2.5em;
-    background-color:transparent;
-}
 h1#event_page{
-
     text-align: center;
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .event_img{
-    width:100%;
+   max-width:100%;
 }
 div.event_list{
     display:inline-block;
