--- a/Webpage/css/frontpageStyling.css
+++ b/Webpage/css/frontpageStyling.css
@@ -59,6 +59,7 @@
 }
 
 .bottomNavigation a {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     float: left;
     display: block;
     color: #f2f2f2;
