--- a/Webpage/pages/contact.css
+++ b/Webpage/pages/contact.css
@@ -1,6 +1,18 @@
+/* set all elements to box-sizing border-box*/
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 .container {
   display: grid;
   max-height: 100vh;
+  max-width: 100vw;
   gap: 0.2rem;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
@@ -8,19 +20,28 @@
 
 .contactPerson {
   display: grid;
-  grid-template-columns: 1fr 80%;
+  grid-template-columns: 600px 282px;
+  grid-template-areas: "text img";
+  justify-content: end;
 }
 
-.container > .contactPerson:nth-child(odd) {
-  justify-self: end;
+.contactPerson:nth-child(even) {
+  grid-template-areas: "img text";
+  grid-template-columns: 282px 600px;
+  justify-content: start;
 }
-.container > .contactPerson:nth-child(even) {
-  justify-self: start;
+/* .contactPerson:nth-child(odd) {
+  justify-items: end;
 }
+.contactPerson:nth-child(even) {
+  justify-items: start;
+}  */
 
-.contactPerson > img {
-  float: left;
-  height: 150px;
-  width: auto;
+.text {
+  grid-area: text;
+}
+.contactPerson img {
+  width: 250px;
   margin: 1rem;
+  grid-area: img;
 }
