--- a/Webpage/css/mainpage.css
+++ b/Webpage/css/mainpage.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Patua+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap');
+
 html,body{
     padding: 0;
     margin: 0;
+    color: #313131;
+    font-family: 'Nanum Myeongjo', serif;
 }
 
 *{
@@ -81,6 +86,7 @@ html,body{
 }
 
 nav {
+    font-family: 'Nanum Myeongjo', serif;
     display: none;
     position: absolute;
     top: 14vh;
@@ -121,37 +127,254 @@ nav li a{
     margin-right: 30px;
     max-height: 15vh;
 }
+.container{
+    position: relative;
+    background-color: #fafafa;
+}
+.section-title {
+    color: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+    width: 100%;
+    font-size: 1.7rem;
+    padding-top: 3rem;
+    z-index: 3;
+}
+
+.section-title h1{
+    background-color: #fafafa;
+    width: auto;
+    position: relative;
+    z-index: 2;
+    padding: 20px 20px;
+}
+.section-title::before{
+    
+    position: absolute;
+    content: "";
+    height: 2px;
+    width: 40%;
+    background: rgb(80, 189, 198);
+    right: 50%;
+    z-index: 1;
+}
+.section-title::after{
+    
+    position: absolute;
+    content: "";
+    height: 2px;
+    width: 50%;
+    background: rgb(80, 189, 198);
+    right: 10%;
+    z-index: 1;
+}
 
 
 .eventHighlights {
+    position: relative;
+    font-family: 'Nanum Myeongjo', serif;
+    background-color: #fafafa;
     display: grid;
-    grid-template-areas:
-    'main main main main main main'
-    'mainText mainText mainText mainText mainText mainText';
-    grid-gap: 0px;
-    background-color: #2196f3;
-    padding: 6px;
+    height: 100%;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(12rem,18rem));
+    grid-gap: 1rem;
+    padding: 4rem 5.7vw;
+    justify-content: center;
+}
+
+.main-card{
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    grid-row: span 2;
+    grid-column: span 2;
+    height: 51rem;
+    box-shadow: 0 4px 40px 0 rgba(0, 0, 0, 0.1), 0 6px 12px 0 rgba(0, 0, 0, 0.1);
+    transition: all 250ms ease-in-out;
+    border-radius: 10px;
+    background: url('../images/people-concert4.jpeg') no-repeat center center;
+    background-size: cover;
+}
+
+.main-card::before{
+    position: absolute;
+    content: '';
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    opacity: 0.4;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 100%;
+    height: 25rem;
+    grid-row: span 1;
+    grid-column: span 1;
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.1), 0 6px 60px 0 rgba(0, 0, 0, 0.1);
+    transition: all 250ms ease-in-out;
+    border-radius: 10px;
+}
+
+.card:hover, .main-card:hover{
+    transform: scale(1.02);
+    transform-origin: center;
+    box-shadow: 10px 30px 60px 0 rgba(0, 0, 0, 0.1);
+}
+
+.card p, .card h2 {
+    margin: 0 20px;
+}
+
+.card .category {
+    color: #67E3F4;
+    padding: 10px 0;
+}
+
+.card .date{
+    margin-top: auto;
+    margin-bottom: 10px;
+}
+.card h2 {
+    font-weight: 700;
+    margin-top: 10px;
+}
+
+.card .description{
+    margin-top: 10px;
+    font-size: 0.9 rem;
+    color: #666
+}
+
+.card i{
+    position: absolute;
+    bottom: 10px;
+    right: 20px;
+    color: #e3e3e3;
+    font-size: 1.2rem;
+}
+.card img {
+    border-radius: 10px;
+    object-fit: cover;
+    width: 100%;
+    height: 40%
+
+}
+
+.main-card .title{
+    margin-top: 40px;
+    font-size: 4.2rem;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    color: #ffffff;
+
+}
+
+.main-card .category {
+    margin-top: 50%;
+    font-size: 1.2rem;
+    color: #ffffff;
+    font-weight: 700;
+}
+.category{
+    position: relative;
+}
+
+.category::before{
+    content: '•';
+}
+.main-card .place {
+    margin-top:auto;
+    color:#64E1CA;
+    font-weight: 400;
+    border-bottom: 0.5px solid #64E1CA;
+    width: 27%;
+    font-size: 0.8rem;
+}
+
+.main-card i{
+    position: absolute;
+    right: 40px;
+    bottom: 40px;
+    font-size: 1.8rem;
+    color: #ffffff;
+}
+
+.main-card .category span::before{
+    content: '22:45';
+    position: absolute;
+    top : 30px;
+    right: 0;
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+.main-card .category span{
+    position: relative;
+    float:right;
+    font-size: 1.5rem;
+}
+
+.main-card .description{
+    margin-top: 60px;
+    margin-bottom: 60px;
+    color: #ffffff;
+    font-size: 1.2rem;
+    font-weight: 400;
+    
 }
 
 .eventHighlights > div {
-    background-color: darkgray;
-    text-align: center;
-    padding: 10px 0;
-    font-size: 30px;
+
 }
 
 .bottomNavigation {
-    display: grid;
-    grid-template-areas:
-    'footer footer footer footer footer footer';
-    grid-gap: 0px;
-    background-color: #2196f3;
-    padding: 6px;
+   
+/*    background-color: #2196f3;
+    padding: 6px;*/
 }
 
 .bottomNavigation > div {
-    background-color: darkgray;
+    background-color: #fafafa;
     text-align: center;
     padding: 10px 0;
     font-size: 30px;
+}
+
+@media screen and (max-width: 604px) {
+    .eventHighlights {
+      display: block;
+    }
+    .card{
+        height: 25rem;
+        width: 90%;
+        margin: auto;
+        margin-top: 20px;
+    }
+    .main-card {
+        width: 90%;
+        margin: auto;
+        height: 50rem;
+        padding: 30px;
+    }
+    .main-card .title {
+        font-size: 2.8rem;
+    }
+    
+    .main-card .place {
+        width: 40%;
+    }
+    .main-card i{
+        right: 30px;
+        bottom: 30px;
+    }
+    .main-card .description {
+        margin-top: 35%;
+    }
 }
