--- a/Webpage/css/events.css
+++ b/Webpage/css/events.css
@@ -1,22 +1,60 @@
 body{
     margin:5%;
     background-color: #d9d9d9;
-}
-h1#event_page{
-    text-align: center;
-    font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+h1#event_head{
+    text-align: center;
+    font-weight: bold;
+   
+    margin:20px;
+}
+#events{
+    width:90%;
+    margin:2% auto;
+}
 .event_img{
+    padding-top:2%;
    max-width:100%;
 }
 div.event_list{
     display:inline-block;
     margin:2%;
-    width:45%;
 }
 h3{
     text-align: center;
-    text-decoration: underline;
+}
+h3:hover{
+    text-decoration:underline;
+}
+a{
+    color:black;
+    text-decoration: none;
+}
+#filter{
+    width: 20%;
+    margin:3% auto;
+}
+select,option{
+    width:100%;
+    height: 2vw;
+    font-weight: bold;
+}
+option{
     font-size:1em;
+    line-height: 1em;
+}
+#filter_bar{
+    width:50%;
+    text-align:center;
+    
+    margin:0px auto;
+
+}
+#filter_bar p{
+    display:inline;
+    text-align:center;
+    font-size:1.2em;
+    padding:5px;
+    font-weight:bold;
 }
