--- a/Webpage/pages/contact.css
+++ b/Webpage/pages/contact.css
@@ -13,22 +13,27 @@ html {
   display: grid;
   max-height: 100vh;
   max-width: 100vw;
-  gap: 0.2rem;
+  gap: 0.8rem;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
 }
 
 .contactPerson {
   display: grid;
-  grid-template-columns: fit-content(70ch) fit-content(10%);
+  grid-template-columns: minmax(10ch, 70ch) fit-content(10%);
   grid-template-areas: "text img";
-  justify-content: end;
+  justify-self: end;
+  border-radius: 50px;
+  border: solid 5px;
+  background-color: aqua;
+  padding: 5px;
+
 }
 
 .contactPerson:nth-child(even) {
   grid-template-areas: "img text";
   grid-template-columns: fit-content(10%) fit-content(70ch);
-  justify-content: start;
+  justify-self: start;
 }
 
 .text {
@@ -39,4 +44,5 @@ html {
   margin: 1rem;
   grid-area: img;
   box-sizing: border-box;
+  border-radius: 50px;
 }
