--- a/Webpage/pages/contact.css
+++ b/Webpage/pages/contact.css
@@ -1,4 +1,4 @@
-/* set all elements to box-sizing border-box*/
+/* set all elements to box-sizing border-box */
 html {
   box-sizing: border-box;
 }
@@ -13,26 +13,28 @@ html {
   display: grid;
   max-height: 100vh;
   max-width: 100vw;
-  gap: 0.8rem;
+  gap: 1.5rem;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
 }
 
 .contactPerson {
   display: grid;
-  grid-template-columns: minmax(10ch, 70ch) fit-content(10%);
+  grid-template-columns: minmax(10ch, 70ch) fit-content(360px);
   grid-template-areas: "text img";
-  justify-self: end;
-  border-radius: 50px;
-  border: solid 5px;
-  background-color: aqua;
-  padding: 5px;
+  gap: 0.8rem;
 
+  justify-self: end;
+
+  border-radius: 20px;
+  box-shadow: 0.5rem 0.5rem 0.8rem -0.1rem ;
+
+  padding: 1rem;
 }
 
 .contactPerson:nth-child(even) {
   grid-template-areas: "img text";
-  grid-template-columns: fit-content(10%) fit-content(70ch);
+  grid-template-columns: fit-content(360px) fit-content(70ch);
   justify-self: start;
 }
 
@@ -40,9 +42,8 @@ html {
   grid-area: text;
 }
 .contactPerson img {
-  width: 360px;
-  margin: 1rem;
+  width: 100%;
+  height: auto;
   grid-area: img;
-  box-sizing: border-box;
   border-radius: 50px;
 }
