--- a/Webpage/css/mainpage.css
+++ b/Webpage/css/mainpage.css
@@ -469,11 +469,26 @@ a {
 }
 
 footer {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #010207;
     color: white;
     text-align: center;
     padding: 10px 0;
     font-size: 30px;
+}
+
+.footer > a {
+    margin-left: 10px;
+    font-size: 30px;
+    font-weight: normal;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    float: left;
+    color: white;
+}
+
+.footer > a.contact {
+    float: right;
+    margin-right: 10px;
 }
 
 @media screen and (max-width: 604px) {
