--- a/Webpage/pages/contact.css
+++ b/Webpage/pages/contact.css
@@ -47,6 +47,35 @@ html {
   justify-self: start;
 }
 
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: #010207;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+  font-size: 30px;
+}
+
+.footer > a.home {
+  color: white;
+  text-align: center;
+  font-size: 30px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.footer > a.about {
+  float: left;
+  margin-left: 10px;
+  font-size: 30px;
+  font-weight: normal;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: white;
+}
+
 @media (max-width: 650px) {
   .contactPerson {
     grid-template-columns: 1fr;
