--- a/Webpage/css/events.css
+++ b/Webpage/css/events.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap');
 body{
     margin:5%;
-    background-color: #d9d9d9;
+    background-color: #fafafa;
     font-family: 'Nanum Myeongjo', serif;
 }
 h1#event_head{
