--- a/Webpage/css/admin.css
+++ b/Webpage/css/admin.css
@@ -1,103 +1,82 @@
 body{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     height: 100vh;
 }
-.container{
-    height: 88vh;
-    background: #fafafa;
+.container {
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 40vh;
-    width: 40vh;
-    min-height: 400px;
-    min-width: 400px;
-    background: #ffffff;
-    box-shadow: 0 6px 40px 0 rgb(0,0,0,0.1);
-    border-radius: 10px;
-    position: relative;
-}
-
-.form h1 {
-    margin-bottom: 1em;
-}
-.form input{
-    width: 80%;
-    padding: 1em;
-    margin-bottom: 1.5em;
-    border: 1px solid #ccc;
-    
-}
-
-.login-button::after{
-    content: 'Wrong username or password!';
-    position: absolute;
-    font-size: 0.7em;
-    width: 60%;
-    padding: 10px;
-    color: red;
-    bottom: 20px;
-    right: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    background: #f4f4f4
-}
-
-footer{
-    margin-top: auto;
-}
-h1 {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: center;
-}
-
-h2 {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: center;
-}
-
-p {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: center;
-    margin: 5% 15% 15% 15%;
-}
-
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #010207;
-    color: white;
-    text-align: center;
-    padding: 10px 0;
-    font-size: 30px;
+    width: 100vw;
+    height: 100%;
   }
 
-.footer > a.home {
-    background-color: black;
-    color: white;
+  main{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      background: #fafafa;
+      margin-left: 10px;
+  }
+
+  
+
+  main * {
+      width: 400px;
+  }
+  main h2{
+    width: 600px;
     text-align: center;
-    font-size: 30px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 2em;
+    font-size: 2.2em;
+  }
+
+  main input, select{
+      padding: 0.8em;
+      margin-bottom: 1em;
+  }
+
+  main label{
+      font-size: 1.5em;
+    font-weight: 700;
+  }
+
+  aside{
+      width: 240px;
+      display: flex;
+      flex-direction: column;
+      font-size: 1em;
+      background: #f4f4f4;
+      color: #313131;
+      font-weight: 700;
+  }
+  .aside_links:first-child{
+      margin-top: 3em;
+  }
+
+  .aside_links{
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      
+  }
+  .aside_links i{
+      
+  }
+  .aside_links span{
+      margin-left: 5px;
+      cursor: pointer;
+  }
+
+  .aside_links:hover  {
+    background: #67E3F4;
+    color: white!important;
   }
   
-.footer > a.contact {
-    background-color: black;
-    float: left;
-    margin-left: 10px;
-    font-size: 30px;
-    font-weight: normal;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: white;
+  .aside_links:hover a{
+    color: white!important;
   }
+
+  footer{
+    margin-top: auto;
+}
