--- a/Webpage/css/contact.css
+++ b/Webpage/css/contact.css
@@ -11,11 +11,12 @@ html {
 
 .container {
   display: grid;
-  max-height: 100vh;
-  max-width: 100vw;
+  max-height: 100%;
+  max-width: 100%;
   gap: 1.5rem;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  padding: 0.7rem
 }
 
 .contactPerson {
@@ -48,7 +49,7 @@ html {
 }
 
 .footer {
-  position: fixed;
+  position: relative;
   left: 0;
   bottom: 0;
   width: 100%;
