--- a/Webpage/css/contact.css
+++ b/Webpage/css/contact.css
@@ -15,8 +15,8 @@ html {
   max-width: 100%;
   gap: 1.5rem;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-  padding: 0.7rem
+  grid-template-rows: auto auto auto auto auto;
+  padding: 0.7rem;
 }
 
 .contactPerson {
@@ -24,17 +24,29 @@ html {
   grid-template-columns: minmax(10ch, 70ch) fit-content(360px);
   grid-template-areas: "text img";
   gap: 0.8rem;
-
+  
   justify-self: end;
-
+  
   border-radius: 20px;
   box-shadow: 0.5rem 0.5rem 0.8rem -0.1rem;
-
+  
   padding: 1rem;
 }
 
 .text {
+  display:flex;
+  flex-direction:column;
   grid-area: text;
+}
+.text h2{
+  padding-bottom: 0.5rem;
+}
+.contactInfo {
+ margin-top: auto;
+ 
+  padding-top: 0.5rem;
+  font-weight: 900;
+  padding-left: 0.5rem;
 }
 .contactPerson img {
   width: 100%;
@@ -53,7 +65,7 @@ html {
   left: 0;
   bottom: 0;
   width: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #010207;
   color: white;
   text-align: center;
@@ -65,7 +77,7 @@ html {
   color: white;
   text-align: center;
   font-size: 30px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .footer > a.about {
@@ -73,7 +85,7 @@ html {
   margin-left: 10px;
   font-size: 30px;
   font-weight: normal;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: white;
 }
 
