--- a/Webpage/css/admin.css
+++ b/Webpage/css/admin.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 body{
     display: flex;
     flex-direction: column;
@@ -7,9 +10,13 @@ body{
     display: flex;
     width: 100vw;
     height: 100%;
+    max-height: 200%;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
 
   main{
+      position: relative;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -79,4 +86,44 @@ body{
 
   footer{
     margin-top: auto;
+}
+
+.hide{
+    display: none;
+}
+
+.success h2::after{
+    content : 'Event Successfully Added';
+    position: absolute;
+    top: 1em;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 0.5em;
+    background-color: #67E3F4;
+    color: #313131;
+    
+    border: dashed 1px #313131;
+}
+
+.edit_events_container{
+   width: 100%;
+   height: fit-content;
+   position: relative;    
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   background-color: #fafafa;
+   margin-left: 10px;
+}
+
+.edit_card{
+    display: flex;
+    background: red;
+    border-radius: 10px;
+    width: 50%;
+    margin-bottom: 2em;
+}
+.edit_card img{
+    width: 20%;
+    border-radius: 10px;
 }
