--- a/Webpage/css/mainpage.css
+++ b/Webpage/css/mainpage.css
@@ -456,6 +456,70 @@ button{
     box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.1), 0 6px 12px 0 rgba(0, 0, 0, 0.1);
 }
 
+.contact-us {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    background-color: #fafafa;
+    padding: 0 5rem 3rem 5rem;
+    
+}
+.contact-us .section-title{
+    margin-bottom: 3rem;
+}
+
+.google-maps-container{
+    padding: 0 ;
+    height: 30rem;
+    width: 30rem;
+    
+}
+.google-maps-container iframe{
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    
+}
+.contact-form * {
+    width: 100%;
+    margin-top: 20px;
+}
+
+.contact-form input{
+    height: 40px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+}
+
+.textarea{
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    color: #333
+}
+
+.contact-form {
+    
+    position: relative;
+    height: 30rem;
+    width: 30rem;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 20px;
+    margin-top: -40px;
+}
+
+.contact-form button{
+    margin-left: 50%;
+    width: 50%;
+}
+
+
+
 a {
     text-decoration: none;
     color: #010207;
