--- a/Webpage/css/eventdetails.css
+++ b/Webpage/css/eventdetails.css
@@ -1,117 +1,41 @@
-html,body{
-    padding: 0;
-    margin: 0;
-    color: #313131;
-    font-family: 'Nanum Myeongjo', serif;
+html,
+body {
+  padding: 0;
+  margin: 0;
+  color: #313131;
+  font-family: "Nanum Myeongjo", serif;
 }
 
-.topNavigation {
-    display: flex;
-    height: 12vh;
-    position: relative;
-    background-color: #ffffff;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0;
-    margin: 0;
-    z-index: 2;
+.ingress {
+  font-weight: 800;
 }
 
-.menulist {
-    position: relative;
-    display:flex;
-    justify-content: flex-start;
-    align-items: center;
-    height: 30px;
-    width: 30px;
-    z-index: 1;
-    cursor:pointer;
-    margin-left: 60px;
-    background-color:#ffffff;
+.container {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+
+  gap: 1rem;
+  width: 100%;
+  background-color: #fafafa;
+  padding: 0.2rem 2rem 0.2rem 2rem;
 }
 
-.menulist span,
-.menulist span::before,
-.menulist span::after{
-    position: absolute;
-    content : '';
-    width: 30px;
-    height: 3px;
-    border-radius: 10px;
-    background:#313131;
-    transition: all 250ms ease-in-out;
+.bigPicture {
+  grid-column: 1 / 4;
+  justify-self: center;
 }
 
-.menulist span::before{
-    transform: translateY(-10px);
+.bigPicture img {
+  width: 100%;
 }
 
-.menulist span::after{
-    transform: translateY(10px);
+.eventPictures img {
+  border-radius: 20px;
+  width: 100%;
 }
 
-.toggle-checkbox:checked ~ .menulist>span::after {
-    transform: rotate(270deg) translateX(-1px)translateY(-1px);
-}
-
-.toggle-checkbox:checked ~ .menulist>span {
-    transform: rotate(45deg) ;
-}
-
-.toggle-checkbox:checked ~ .menulist>span::before{
-    transform: translateY(5px);
-    opacity: 0;
-}
-
-.toggle-checkbox:checked ~ nav{
-    transform: translateY(-3vh);
-    display: block;
-    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.1), 0 6px 12px 0 rgba(0, 0, 0, 0.1);
-}
-
-.toggle-checkbox {
-    display: none;
-}
-
-nav {
-    font-family: 'Nanum Myeongjo', serif;
-    display: none;
-    position: absolute;
-    top: 14vh;
-    left: 2vw;
-    width: 200px;
-    font-size: 1.5em;
-    transform: translateY(-3vh);
-    border-radius: 10px;
-    transition: all 250ms ease-in-out;
-    overflow: hidden;
-    z-index: 9999;
-}
-
-nav ul{
-    list-style: none;
-    margin: 0;
-
-    padding: 0;
-}
-
-nav li {
-    padding: 1em;
-    font-weight: 700;
-    background-color: #ffffff;
-    border: solid 1px #f4f4f4;
+@media (max-width: 650px) {
+  .container {
+    grid-template-columns: 1fr;
   }
-
-nav li:hover{
-    background-color: #67E3F4;
-}
-nav li a{
-    text-decoration: none;
-    color: #313131;
-}
-
-.logo img{
-    height: 10vh;
-    margin-right: 30px;
-    max-height: 15vh;
 }
