--- a/css/styles.css
+++ b/css/styles.css
@@ -162,3 +162,25 @@ p {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
   }
+
+  .textbox-container{
+    background-color: #ffffff;
+    height: 120vh;
+  }
+
+  .textbox{
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    object-fit: contain;
+    height: 100%;
+    margin: 3rem auto;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.1), 0 6px 12px 0 rgba(0, 0, 0, 0.1);
+  }
+
+  .textbox img {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
